Feat: storage testing
